<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/store_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tv_store_info_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_info_header"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tv_store_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_store_info_header"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_store_info_header"
                app:layout_constraintLeft_toRightOf="@+id/tv_store_name_label"/>

            <TextView
                android:id="@+id/tv_city_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_label"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_store_name_label"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_store_name_label"
                app:layout_constraintLeft_toRightOf="@+id/tv_city_label"/>

            <TextView
                android:id="@+id/tv_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_label"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_city"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_city"
                app:layout_constraintLeft_toRightOf="@+id/tv_phone_label"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_product_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linear_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_1"
        tools:listitem="@layout/cv_product_details" />

    <LinearLayout
        android:id="@+id/linear_2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@android:color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_order_summary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <Button
        android:id="@+id/btn_order_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        android:text="@string/summary"/>

</androidx.constraintlayout.widget.ConstraintLayout>